@@ -1,4 +1,11 @@
 FROM openjdk:8-jdk-alpine
-COPY target/*.jar app.jar
-EXPOSE 8080
-CMD java -XX:+PrintFlagsFinal -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+
+VOLUME /tmp
+
+ARG DEPENDENCY=target/dependency
+
+COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
+COPY ${DEPENDENCY}/META-INF /app/META-INF
+COPY ${DEPENDENCY}/BOOT-INF/classes /app
+
+ENTRYPOINT ["java","-cp","app:app/lib/*","com.payconiq.stockservice.StockserviceApplication"]
